--- a/index.html
+++ b/index.html
@@ -24,14 +24,6 @@
   </head>
   <body>
 
-    <!--Loading start-->
-    <div id="loader" style="display: none;">
-      <div class="loading">
-          <span>Loading</span>
-      </div>
-  </div>
-  <!--Loading end-->
-
     <!-- Navbar -->
     <section id="nav">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -125,14 +117,15 @@
       </div>
       <br><br><br>
       <div class="about">
-        <img src="assets/img/DOA_MOCKUP.png" alt="">
+        <img src="assets/img/ynl.JPG" alt="">
         <div class="content">
           <div class="title-1">
-            <h3>Mug Reminder</h3>
-            <p>Di dalam era yang serba teknologi ini kita juga harus pintar memahami bagaimana cara mengimbangi di era saat ini untuk tetap saling mengingatkan. Melewati mug yang biasa kita pakai untuk memanjakan dahaga terdapat kata Remender adab dalam minum atau kata motivasi yang bisa bikin kamu lebih semangat.</p>
+            <h3>Your Night Light</h3>
+            <p>Foto bingkai + jam ini selain bisa digunakan untuk mengingat waktu, juga bisa menjadi lampu peneman tidur serta di lengkapi foto yang anda sukai, di tambahi pesan manis untuk keseharian mu dari orang yang dicintai.
+              Bukan hanya itu bingkai jam ini juga bisa di gunakan untuk souvenir, hampers atau gifts for our loved ones</p>
           </div>
         </div>
-      </div>>
+        </div>
 
       <div class="about">
         <img src="assets/img/Thxful_Mockup.png" alt="">
@@ -175,7 +168,7 @@
               </p>
                  <a href="https://www.tokopedia.com/artibistore" target="_blank">Beli Sekarang</a>
             </div>
-            <img src="assets/img/tumbler.png">
+            <img class="img-3" src="assets/img/usamah.png">
           </div>
           <br><br><br>
           <div class="click text-center mb-3">
