--- a/produk.html
+++ b/produk.html
@@ -88,17 +88,17 @@
                 </p>
                    <a href="https://www.tokopedia.com/artibistore" target="_blank">Beli Sekarang</a>
               </div>
-              <img src="assets/img/tumbler.png">
+              <img class="img-3" src="assets/img/usamah.png">
             </div>
 
             <div class="card">
               <div class="circle"></div>
               <div class="content">
-                <h3>Bingkai jam</h3>
+                <h3>Your Night Light</h3>
                 <p>bingkai jam bukan sembarang bingkai jam. bingkai jam dengan design unik yang disertai lampu tidur, foto, dan ucapan. lucu bukan? bisa loh buat gift untuk orang-orang tersayang kalian. </p>
                    <a href="https://www.tokopedia.com/artibistore" target="_blank">Beli Sekarang</a>
               </div>
-              <img src="assets/img/pepsi.png">
+              <img class="img-4" src="assets/img/ynll.png">
             </div>
 
           <br><br><br><br>
@@ -124,7 +124,7 @@
             <div class="card">
                 <div class="circle"></div>
                 <div class="content">
-                  <h3>Tumbler Alumunium</h3>
+                  <h3>Tumbler Reminder</h3>
                   <p>Banyak orang yang saat ini sudah menggunakan termos/Tumbler, tapi tidak banyak orang yang memiliki termos/Tumbler yang tidak hanya itu-itu saja.</p>
                      <a href="https://www.tokopedia.com/artibistore" target="_blank">Beli Sekarang</a>
                 </div>
@@ -148,7 +148,6 @@
             <h6>Social :</h6>
            <a href="https://www.instagram.com/accounts/login/?next=/artibistore/" target="_blank">Instagram.</a>
            <a href="https://www.tokopedia.com/artibistore" target="_blank">Tokopedia.</a>
-           <br>
            <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#search/ARTibisquad6%40gmail.com" target="_blank">Gmail.</a>
           </div>
 
