--- a/story.html
+++ b/story.html
@@ -78,7 +78,7 @@
     <!-- About -->
     
         <section id="about" data-aos="fade-up" data-aos-duration="1000">
-          <img src="assets/img/Thxful_Mockup.png" alt="">
+          <img src="assets/img/usamah.png" alt="">
           <div class="content">
             <div class="title">
               <h2>Tumbler Islamic Figure</h2>
@@ -88,10 +88,10 @@
         </section>
 
         <section id="about" data-aos="fade-up" data-aos-duration="1000">
-          <img src="assets/img/Keep_smiling_Mockup.png" alt="">
+          <img src="assets/img/ynl.JPG" alt="">
           <div class="content">
             <div class="title">
-              <h2>Bingkai Jam</h2>
+              <h2>Your Night Light</h2>
               <p>Bingkai jam ini selain bisa digunakan untuk mengingat waktu, juga bisa menjadi lampu peneman tidur serta di lengkapi foto yang anda sukai, di tambahi pesan manis untuk keseharian mu dari orang yang dicintai.
                 Bukan hanya itu bingkai jam ini juga bisa di gunakan untuk souvenir, hampers atau gifts for our loved ones</p>
             </div>
@@ -117,7 +117,7 @@
         </section>
 
         <section id="about" data-aos="fade-up" data-aos-duration="1000">
-          <img src="assets/img/INDEED_WHWBE_MOCKUP.png" alt="">
+          <img src="assets/img/alumunium.png" alt="">
           <div class="content">
             <div class="title">
               <h2>Tumbler Reminder</h2>
