--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
 
       <div class="about">
-        <img src="assets/img/Thxful_Mockup.png" alt="">
+        <img src="assets/img/Usamah bin Zaid mockup (1).png" alt="">
         <div class="content">
           <div class="title-1">
             <h3>Tumbler Islamic Figure</h3>
