--- a/produk.html
+++ b/produk.html
@@ -125,7 +125,7 @@
                 <div class="circle"></div>
                 <div class="content">
                   <h3>Tumbler Reminder</h3>
-                  <p>Banyak orang yang saat ini sudah menggunakan termos/Tumbler, tapi tidak banyak orang yang memiliki termos/Tumbler yang tidak hanya itu-itu saja.</p>
+                  <p>Banyak orang yang saat ini sudah menggunakan termos/Tumbler, tapi tidak banyak orang yang memiliki termos/Tumbler yang bisa menjadi reminder.</p>
                      <a href="https://www.tokopedia.com/artibistore" target="_blank">Beli Sekarang</a>
                 </div>
                 <img class="img-2" src="assets/img/alumunium.png">
