--- a/story.html
+++ b/story.html
@@ -78,7 +78,7 @@
     <!-- About -->
     
         <section id="about" data-aos="fade-up" data-aos-duration="1000">
-          <img src="assets/img/usamah.png" alt="">
+          <img src="assets/img/Usamah bin Zaid mockup (1).png" alt="">
           <div class="content">
             <div class="title">
               <h2>Tumbler Islamic Figure</h2>
@@ -117,7 +117,7 @@
         </section>
 
         <section id="about" data-aos="fade-up" data-aos-duration="1000">
-          <img src="assets/img/alumunium.png" alt="">
+          <img src="assets/img/Tumbler alumunium mockup.png" alt="">
           <div class="content">
             <div class="title">
               <h2>Tumbler Reminder</h2>
