--- a/produk.html
+++ b/produk.html
@@ -146,7 +146,7 @@
 
           <div class="footer-section ml-auto">
             <h6>Social :</h6>
-           <a href="https://www.instagram.com/accounts/login/?next=/artibistore/" target="_blank">Instagram.</a>
+           <a href="https://www.instagram.com/artibistore/" target="_blank">Instagram.</a>
            <a href="https://www.tokopedia.com/artibistore" target="_blank">Tokopedia.</a>
            <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#search/ARTibisquad6%40gmail.com" target="_blank">Gmail.</a>
           </div>
