--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       </div>
       <br><br><br>
       <div class="about">
-        <img src="assets/img/ynl.JPG" alt="">
+        <img src="assets/img/ynlll.JPG" alt="">
         <div class="content">
           <div class="title-1">
             <h3>Your Night Light</h3>
@@ -296,7 +296,7 @@
 
           <div class="footer-section ml-auto">
             <h6>Social :</h6>
-           <a href="https://www.instagram.com/accounts/login/?next=/artibistore/" target="_blank">Instagram.</a>
+           <a href="https://www.instagram.com/artibistore/" target="_blank">Instagram.</a>
            <a href="https://www.tokopedia.com/artibistore" target="_blank">Tokopedia.</a>
            <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#search/ARTibisquad6%40gmail.com" target="_blank">Gmail.</a>
           
