--- a/story.html
+++ b/story.html
@@ -88,7 +88,7 @@
         </section>
 
         <section id="about" data-aos="fade-up" data-aos-duration="1000">
-          <img src="assets/img/ynl.JPG" alt="">
+          <img src="assets/img/ynlll.JPG" alt="">
           <div class="content">
             <div class="title">
               <h2>Your Night Light</h2>
@@ -159,7 +159,7 @@
   
             <div class="footer-section ml-auto">
               <h6>Social :</h6>
-             <a href="https://www.instagram.com/accounts/login/?next=/artibistore/" target="_blank">Instagram.</a>
+             <a href="https://www.instagram.com/artibistore/" target="_blank">Instagram.</a>
              <a href="https://www.tokopedia.com/artibistore" target="_blank">Tokopedia.</a>
              <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#search/ARTibisquad6%40gmail.com" target="_blank">Gmail.</a>
             </div>
