--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <section id="pricing"  data-aos="fade-up" data-aos-duration="1000">
       <br><br><br>
       <div class="title">
-        <h2 class="text-center mb-3">Our <span>Product</span></h2>
+        <h2 class="text-center mb-3">Our <span>Products</span></h2>
         <p class="text-center mb-3">Berbagai produk bermanfaat dengan design yang Islamic, Dan bisa menjadi reminder kamu!!</p>
       </div>
         <br><br><br>
