update card, add video

--- a/produk.html
+++ b/produk.html
@@ -88,13 +88,16 @@
                 </p>
                    <a href="https://www.tokopedia.com/artibistore" target="_blank">Beli Sekarang</a>
               </div>
-              <img class="img-3" src="assets/img/usamah.png">
+            <img class="img-5" src="assets/img/ak.png" alt="">
+            <img class="img-6" src="assets/img/ali.png" alt="">
+            <img class="img-7" src="assets/img/nbk.png" alt="">
+            <img class="img-3" src="assets/img/ubz.png" alt="">
             </div>
 
             <div class="card">
               <div class="circle"></div>
               <div class="content">
-                <h3>Your Night Light</h3>
+                <h3>Your Night Lamp</h3>
                 <p>bingkai jam bukan sembarang bingkai jam. bingkai jam dengan design unik yang disertai lampu tidur, foto, dan ucapan. lucu bukan? bisa loh buat gift untuk orang-orang tersayang kalian. </p>
                    <a href="https://www.tokopedia.com/artibistore" target="_blank">Beli Sekarang</a>
               </div>
