--- a/story.html
+++ b/story.html
@@ -91,7 +91,7 @@
           <img src="assets/img/ynlll.JPG" alt="">
           <div class="content">
             <div class="title">
-              <h2>Your Night Light</h2>
+              <h2>Your Night Lamp</h2>
               <p>Bingkai jam ini selain bisa digunakan untuk mengingat waktu, juga bisa menjadi lampu peneman tidur serta di lengkapi foto yang anda sukai, di tambahi pesan manis untuk keseharian mu dari orang yang dicintai.
                 Bukan hanya itu bingkai jam ini juga bisa di gunakan untuk souvenir, hampers atau gifts for our loved ones</p>
             </div>
