--- a/produk.html
+++ b/produk.html
@@ -86,7 +86,7 @@
                 <h3>TUMBLER ISLAMIC FIGURE</h3>
                 <p>Bosan dengan design Tumbler yang gitu-gitu aja? Mari gunakan Tumbler artibi yang tak hanya keren tapi memiliki design tak membosankan dan bermanfaat.
                 </p>
-                   <a href="https://www.tokopedia.com/artibistore" target="_blank">Beli Sekarang</a>
+                   <a href="https://www.tokopedia.com/artibistore" target="_blank">Go To Tokped</a>
               </div>
             <img class="img-5" src="assets/img/ak.png" alt="">
             <img class="img-6" src="assets/img/ali.png" alt="">
@@ -99,7 +99,7 @@
               <div class="content">
                 <h3>Your Night Lamp</h3>
                 <p>bingkai jam bukan sembarang bingkai jam. bingkai jam dengan design unik yang disertai lampu tidur, foto, dan ucapan. lucu bukan? bisa loh buat gift untuk orang-orang tersayang kalian. </p>
-                   <a href="https://www.tokopedia.com/artibistore" target="_blank">Beli Sekarang</a>
+                   <a href="https://www.tokopedia.com/artibistore" target="_blank">Go To Tokped</a>
               </div>
               <img class="img-4" src="assets/img/ynll.png">
             </div>
@@ -119,7 +119,7 @@
               <div class="content">
                 <h3>Mug Reminder</h3>
                 <p> mug yang membuat orang sadar betapa pentingnya mengucapkan hal-hal baik.mulailah ingatkan orang lain secara langsung ataupun secara tidak langsung seperti menggunakan mug ini.</p>
-                  <a href="https://www.tokopedia.com/artibistore" target="_blank">Beli Sekarang</a>
+                  <a href="https://www.tokopedia.com/artibistore" target="_blank">Go To Tokped</a>
               </div>
               <img class="img-1" src="assets/img/mug1.png">
             </div>
@@ -129,7 +129,7 @@
                 <div class="content">
                   <h3>Tumbler Reminder</h3>
                   <p>Banyak orang yang saat ini sudah menggunakan termos/Tumbler, tapi tidak banyak orang yang memiliki termos/Tumbler yang bisa menjadi reminder.</p>
-                     <a href="https://www.tokopedia.com/artibistore" target="_blank">Beli Sekarang</a>
+                     <a href="https://www.tokopedia.com/artibistore" target="_blank">Go To Tokped</a>
                 </div>
                 <img class="img-2" src="assets/img/alumunium.png">
               </div>
